Initial checkin for the compiler. Large parts are very unfinished, but the compiler and the compilerhandlers should be pretty much set, at least the parts that are implemented.

--- a/mozilla/extensions/transformiix/source/xslt/Makefile.in
+++ b/mozilla/extensions/transformiix/source/xslt/Makefile.in
@@ -50,6 +50,8 @@ CPPSRCS = Names.cpp \
         txOutputFormat.cpp \
         ProcessorState.cpp \
         txRtfHandler.cpp \
+        txStylesheetCompiler.cpp \
+        txStylesheetCompilerHandlers.cpp \
         txTextHandler.cpp \
         txXSLTNumber.cpp \
         txXSLTNumberCounters.cpp \
