--- a/mozilla/extensions/transformiix/source/base/Makefile.in
+++ b/mozilla/extensions/transformiix/source/base/Makefile.in
@@ -52,6 +52,7 @@ CPPSRCS	= ArrayList.cpp             \
 	Tokenizer.cpp \
 	txAtoms.cpp \
 	txExpandedNameMap.cpp \
+	txNamespaceMap.cpp \
 	txURIUtils.cpp
 
 ifdef TX_EXE
