--- a/mozilla/extensions/transformiix/source/main/Makefile.in
+++ b/mozilla/extensions/transformiix/source/main/Makefile.in
@@ -50,6 +50,7 @@ OBJS =../base/ArrayList.$(OBJ_SUFFIX) \
   ../base/Tokenizer.$(OBJ_SUFFIX) \
   ../base/txAtoms.$(OBJ_SUFFIX) \
   ../base/txExpandedNameMap.$(OBJ_SUFFIX) \
+  ../base/txNamespaceMap.$(OBJ_SUFFIX) \
   ../base/TxString.$(OBJ_SUFFIX) \
   ../base/txURIUtils.$(OBJ_SUFFIX) \
   ../xml/dom/standalone/Attr.$(OBJ_SUFFIX) \
@@ -107,6 +108,8 @@ OBJS =../base/ArrayList.$(OBJ_SUFFIX) \
   ../xslt/ProcessorState.$(OBJ_SUFFIX) \
   ../xslt/txHTMLOutput.$(OBJ_SUFFIX) \
   ../xslt/txRtfHandler.$(OBJ_SUFFIX) \
+  ../xslt/txStylesheetCompiler.$(OBJ_SUFFIX) \
+  ../xslt/txStylesheetCompilerHandlers.$(OBJ_SUFFIX) \
   ../xslt/txTextHandler.$(OBJ_SUFFIX) \
   ../xslt/txTextOutput.$(OBJ_SUFFIX) \
   ../xslt/txUnknownHandler.$(OBJ_SUFFIX) \
