Fix for bug 187983 (bug 45823 and bug 45824 in mozilla) -- allow dragging of images to the Finder, and to other applications.

--- a/mozilla/widget/src/xpwidgets/Makefile.in
+++ b/mozilla/widget/src/xpwidgets/Makefile.in
@@ -40,6 +40,7 @@ REQUIRES	= xpcom \
 		  htmlparser \
 		  uconv \
 		  unicharutil \
+		  webbrowserpersist \
 		  $(NULL)
 
 DEFINES		+= -D_IMPL_NS_WIDGET -DUSE_TLS_FOR_TOOLKIT
