--- a/mozilla/netwerk/build2/Makefile.in
+++ b/mozilla/netwerk/build2/Makefile.in
@@ -22,7 +22,10 @@
 DEPTH		= ../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@
+VPATH		= @srcdir@ \
+		@srcdir@/../protocol/ftp/public \
+		@srcdir@/../protocol/viewsource/public \
+		$(NULL)
 
 include $(DEPTH)/config/autoconf.mk
 
@@ -35,15 +38,33 @@ REQUIRES	= xpcom \
 		  string \
 		  necko \
 		  nkcache \
+		  pref \
+		  exthandler \
+		  mimetype \
+		  intl \
 		  $(NULL)
 
-CPPSRCS		= nsNetModule2.cpp
-
-SHARED_LIBRARY_LIBS = \
-		$(DIST)/lib/$(LIB_PREFIX)nkgopher_s.$(LIB_SUFFIX) \
-		$(DIST)/lib/$(LIB_PREFIX)nkftp_s.$(LIB_SUFFIX) \
-		$(DIST)/lib/$(LIB_PREFIX)nkviewsource_s.$(LIB_SUFFIX) \
+CPPSRCS		= \
+		nsNetModule2.cpp \
+		../protocol/ftp/src/nsFtpProtocolHandler.cpp \
+		../protocol/ftp/src/nsFTPChannel.cpp \
+		../protocol/ftp/src/nsFtpConnectionThread.cpp \
+		../protocol/ftp/src/nsFtpControlConnection.cpp \
+		../protocol/gopher/src/nsGopherHandler.cpp \
+		../protocol/gopher/src/nsGopherChannel.cpp \
+		../protocol/viewsource/src/nsViewSourceHandler.cpp \
+		../protocol/viewsource/src/nsViewSourceChannel.cpp \
 		$(NULL)
+
+EXPORTS_SUB_MODULES = necko_ftp
+
+necko_ftp_EXPORTS = $(srcdir)/../protocol/ftp/public/ftpCore.h
+
+XPIDLSRCS_SUB_MODULES = necko_ftp necko_viewsource
+
+necko_ftp_XPIDLSRCS = nsIFTPChannel.idl
+
+necko_viewsource_XPIDLSRCS = nsIViewSourceChannel.idl
 
 LOCAL_INCLUDES	= \
 		-I$(srcdir)/../protocol/gopher/src \
@@ -55,4 +76,20 @@ EXTRA_DSO_LDOPTS = \
 		$(MOZ_COMPONENT_LIBS) \
 		$(NULL)
 
+# Use -g for Irix mipspro builds as workaround for bug 92099
+ifneq (,$(filter IRIX IRIX64,$(OS_ARCH)))
+ifndef GNU_CC
+MODULE_OPTIMIZE_FLAGS=$(if $(findstring protocol/ftp,$@),-O -g,)
+endif
+endif
+
+ifeq ($(OS_ARCH),WINNT)
+ifndef MOZ_DEBUG
+ifndef NO_LOGGING
+DEFINES		:= $(if $(findstring protocol/ftp,$@),$(DEFINES) -DFORCE_PR_LOG),$(DEFINES))
+endif
+endif
+endif # WINNT
+
 include $(topsrcdir)/config/rules.mk
+
