--- a/mozilla/intl/Makefile.in
+++ b/mozilla/intl/Makefile.in
@@ -26,7 +26,7 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= unicharutil uconv locale strres lwbrk chardet build
+DIRS		= unicharutil/util uconv/util uconv build
 
 # Sun's Complex Text Layout support
 ifdef SUNCTL
