--- a/mozilla/intl/uconv/Makefile.in
+++ b/mozilla/intl/uconv/Makefile.in
@@ -34,11 +34,20 @@
 DEPTH		= ../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@
+VPATH		= @srcdir@ @srcdir@/idl
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= idl public util ucvja ucvcn ucvlatin ucvtw ucvtw2 ucvko ucvibm src
+MODULE		= uconv
+LIBRARY_NAME	= uconv
+EXPORT_LIBRARY	= 1
+IS_COMPONENT	= 1
+MODULE_NAME	= nsUConvModule
+
+ifneq ($(OS_ARCH),WINNT)
+# To avoid conflict with OS/2 system uconv.dll
+SHORT_LIBNAME  = mozuconv
+endif
 
 ifdef MOZ_MATHML
 DIRS           += ucvmath
@@ -50,5 +59,338 @@ DIRS		+= tests
 endif
 endif
 
+REQUIRES	= xpcom \
+		  string \
+		  intl \
+		  locale \
+		  unicharutil \
+		  chardet \
+		  i18n \
+		  $(NULL)
+
+CSRCS		= \
+		src/ugen.c \
+		src/uscan.c \
+		src/umap.c \
+		$(NULL)
+
+CPPSRCS		= \
+		ucvja/nsJapaneseToUnicode.cpp \
+		ucvja/nsUnicodeToSJIS.cpp \
+		ucvja/nsCP932ToUnicode.cpp \
+		ucvja/nsUnicodeToCP932.cpp \
+		ucvja/nsUnicodeToEUCJP.cpp \
+		ucvja/nsUnicodeToISO2022JP.cpp \
+		ucvja/nsUnicodeToJISx0201.cpp \
+		ucvja/nsUnicodeToJISx0208.cpp \
+		ucvja/nsUnicodeToJISx0212.cpp \
+		ucvcn/nsGB2312ToUnicodeV2.cpp \
+		ucvcn/nsUnicodeToGB2312V2.cpp \
+		ucvcn/nsUnicodeToGB2312GL.cpp \
+		ucvcn/nsGBKToUnicode.cpp \
+		ucvcn/nsUnicodeToGBK.cpp \
+		ucvcn/nsUnicodeToGBKNoAscii.cpp \
+		ucvcn/nsISO2022CNToUnicode.cpp \
+		ucvcn/nsUnicodeToISO2022CN.cpp \
+		ucvcn/nsHZToUnicode.cpp \
+		ucvcn/nsUnicodeToHZ.cpp \
+		ucvcn/nsCP936ToUnicode.cpp \
+		ucvcn/nsUnicodeToCP936.cpp \
+		ucvcn/nsGBKConvUtil.cpp \
+		ucvlatin/nsUEscapeToUnicode.cpp \
+		ucvlatin/nsAsciiToUnicode.cpp \
+		ucvlatin/nsISO88592ToUnicode.cpp \
+		ucvlatin/nsISO88593ToUnicode.cpp \
+		ucvlatin/nsISO88594ToUnicode.cpp \
+		ucvlatin/nsISO88595ToUnicode.cpp \
+		ucvlatin/nsISO88596ToUnicode.cpp \
+		ucvlatin/nsISO88596EToUnicode.cpp \
+		ucvlatin/nsISO88596IToUnicode.cpp \
+		ucvlatin/nsISO88597ToUnicode.cpp \
+		ucvlatin/nsISO88598ToUnicode.cpp \
+		ucvlatin/nsISO88598EToUnicode.cpp \
+		ucvlatin/nsISO88598IToUnicode.cpp \
+		ucvlatin/nsISO88599ToUnicode.cpp \
+		ucvlatin/nsISO885910ToUnicode.cpp \
+		ucvlatin/nsISO885913ToUnicode.cpp \
+		ucvlatin/nsISO885914ToUnicode.cpp \
+		ucvlatin/nsISO885915ToUnicode.cpp \
+		ucvlatin/nsISO885916ToUnicode.cpp \
+		ucvlatin/nsISOIR111ToUnicode.cpp \
+		ucvlatin/nsCP1250ToUnicode.cpp \
+		ucvlatin/nsCP1251ToUnicode.cpp \
+		ucvlatin/nsCP1253ToUnicode.cpp \
+		ucvlatin/nsCP1254ToUnicode.cpp \
+		ucvlatin/nsCP1255ToUnicode.cpp \
+		ucvlatin/nsCP1256ToUnicode.cpp \
+		ucvlatin/nsCP1257ToUnicode.cpp \
+		ucvlatin/nsCP1258ToUnicode.cpp \
+		ucvlatin/nsCP866ToUnicode.cpp \
+		ucvlatin/nsCP874ToUnicode.cpp \
+		ucvlatin/nsKOI8UToUnicode.cpp \
+		ucvlatin/nsKOI8RToUnicode.cpp \
+		ucvlatin/nsMacCEToUnicode.cpp \
+		ucvlatin/nsMacGreekToUnicode.cpp \
+		ucvlatin/nsMacTurkishToUnicode.cpp \
+		ucvlatin/nsMacCroatianToUnicode.cpp \
+		ucvlatin/nsMacRomanianToUnicode.cpp \
+		ucvlatin/nsMacCyrillicToUnicode.cpp \
+		ucvlatin/nsMacUkrainianToUnicode.cpp \
+		ucvlatin/nsMacIcelandicToUnicode.cpp \
+		ucvlatin/nsMacHebrewToUnicode.cpp \
+		ucvlatin/nsMacArabicToUnicode.cpp \
+		ucvlatin/nsMacDevanagariToUnicode.cpp \
+		ucvlatin/nsMacFarsiToUnicode.cpp \
+		ucvlatin/nsMacGujaratiToUnicode.cpp \
+		ucvlatin/nsMacGurmukhiToUnicode.cpp \
+		ucvlatin/nsGEOSTD8ToUnicode.cpp \
+		ucvlatin/nsARMSCII8ToUnicode.cpp \
+		ucvlatin/nsTCVN5712ToUnicode.cpp \
+		ucvlatin/nsVISCIIToUnicode.cpp \
+		ucvlatin/nsVPSToUnicode.cpp \
+		ucvlatin/nsVIQRToUnicode.cpp \
+		ucvlatin/nsVNIToUnicode.cpp \
+		ucvlatin/nsUTF7ToUnicode.cpp \
+		ucvlatin/nsMUTF7ToUnicode.cpp \
+		ucvlatin/nsUCS2BEToUnicode.cpp \
+		ucvlatin/nsUCS2LEToUnicode.cpp \
+		ucvlatin/nsUCS4BEToUnicode.cpp \
+		ucvlatin/nsUCS4LEToUnicode.cpp \
+		ucvlatin/nsT61ToUnicode.cpp \
+		ucvlatin/nsUserDefinedToUnicode.cpp \
+		ucvlatin/nsUnicodeToUEscape.cpp \
+		ucvlatin/nsUnicodeToAscii.cpp \
+		ucvlatin/nsUnicodeToISO88592.cpp \
+		ucvlatin/nsUnicodeToISO88593.cpp \
+		ucvlatin/nsUnicodeToISO88594.cpp \
+		ucvlatin/nsUnicodeToISO88595.cpp \
+		ucvlatin/nsUnicodeToISO88596.cpp \
+		ucvlatin/nsUnicodeToISO88596E.cpp \
+		ucvlatin/nsUnicodeToISO88596I.cpp \
+		ucvlatin/nsUnicodeToISO88597.cpp \
+		ucvlatin/nsUnicodeToISO88598.cpp \
+		ucvlatin/nsUnicodeToISO88598E.cpp \
+		ucvlatin/nsUnicodeToISO88598I.cpp \
+		ucvlatin/nsUnicodeToISO88599.cpp \
+		ucvlatin/nsUnicodeToISO885910.cpp \
+		ucvlatin/nsUnicodeToISO885913.cpp \
+		ucvlatin/nsUnicodeToISO885914.cpp \
+		ucvlatin/nsUnicodeToISO885915.cpp \
+		ucvlatin/nsUnicodeToISO885916.cpp \
+		ucvlatin/nsUnicodeToISOIR111.cpp \
+		ucvlatin/nsUnicodeToCP1250.cpp \
+		ucvlatin/nsUnicodeToCP1251.cpp \
+		ucvlatin/nsUnicodeToCP1253.cpp \
+		ucvlatin/nsUnicodeToCP1254.cpp \
+		ucvlatin/nsUnicodeToCP1255.cpp \
+		ucvlatin/nsUnicodeToCP1256.cpp \
+		ucvlatin/nsUnicodeToCP1257.cpp \
+		ucvlatin/nsUnicodeToCP1258.cpp \
+		ucvlatin/nsUnicodeToCP874.cpp \
+		ucvlatin/nsUnicodeToCP866.cpp \
+		ucvlatin/nsUnicodeToKOI8R.cpp \
+		ucvlatin/nsUnicodeToKOI8U.cpp \
+		ucvlatin/nsUnicodeToLangBoxArabic8.cpp \
+		ucvlatin/nsUnicodeToMacCE.cpp \
+		ucvlatin/nsUnicodeToMacGreek.cpp \
+		ucvlatin/nsUnicodeToMacTurkish.cpp \
+		ucvlatin/nsUnicodeToMacCroatian.cpp \
+		ucvlatin/nsUnicodeToMacRomanian.cpp \
+		ucvlatin/nsUnicodeToMacCyrillic.cpp \
+		ucvlatin/nsUnicodeToMacUkrainian.cpp \
+		ucvlatin/nsUnicodeToMacIcelandic.cpp \
+		ucvlatin/nsUnicodeToMacHebrew.cpp \
+		ucvlatin/nsUnicodeToMacArabic.cpp \
+		ucvlatin/nsUnicodeToMacDevanagari.cpp \
+		ucvlatin/nsUnicodeToMacFarsi.cpp \
+		ucvlatin/nsUnicodeToMacGujarati.cpp \
+		ucvlatin/nsUnicodeToMacGurmukhi.cpp \
+		ucvlatin/nsUnicodeToGEOSTD8.cpp \
+		ucvlatin/nsUnicodeToARMSCII8.cpp \
+		ucvlatin/nsUnicodeToTCVN5712.cpp \
+		ucvlatin/nsUnicodeToVISCII.cpp \
+		ucvlatin/nsUnicodeToVPS.cpp \
+		ucvlatin/nsUnicodeToVIQR.cpp \
+		ucvlatin/nsUnicodeToVNI.cpp \
+		ucvlatin/nsUnicodeToUTF7.cpp \
+		ucvlatin/nsUnicodeToMUTF7.cpp \
+		ucvlatin/nsUnicodeToUCS2BE.cpp \
+		ucvlatin/nsUnicodeToUCS2LE.cpp \
+		ucvlatin/nsUnicodeToUCS4BE.cpp \
+		ucvlatin/nsUnicodeToUCS4LE.cpp \
+		ucvlatin/nsUnicodeToT61.cpp \
+		ucvlatin/nsUnicodeToUserDefined.cpp \
+		ucvlatin/nsUnicodeToSymbol.cpp \
+		ucvlatin/nsUnicodeToZapfDingbat.cpp \
+		ucvlatin/nsUnicodeToAdobeEuro.cpp \
+		ucvtw/nsBIG5ToUnicode.cpp \
+		ucvtw/nsUnicodeToBIG5.cpp \
+		ucvtw/nsBIG5HKSCSToUnicode.cpp \
+		ucvtw/nsUnicodeToBIG5HKSCS.cpp \
+		ucvtw/nsUnicodeToHKSCS.cpp \
+		ucvtw/nsCP950ToUnicode.cpp \
+		ucvtw/nsUnicodeToCP950.cpp \
+		ucvtw/nsUnicodeToBIG5NoAscii.cpp \
+		ucvtw2/nsEUCTWToUnicode.cpp \
+		ucvtw2/nsUnicodeToEUCTW.cpp \
+		ucvtw2/nsUnicodeToCNS11643p1.cpp \
+		ucvtw2/nsUnicodeToCNS11643p2.cpp \
+		ucvtw2/nsUnicodeToCNS11643p3.cpp \
+		ucvtw2/nsUnicodeToCNS11643p4.cpp \
+		ucvtw2/nsUnicodeToCNS11643p5.cpp \
+		ucvtw2/nsUnicodeToCNS11643p6.cpp \
+		ucvtw2/nsUnicodeToCNS11643p7.cpp \
+		ucvko/nsEUCKRToUnicode.cpp \
+		ucvko/nsUnicodeToEUCKR.cpp \
+		ucvko/nsUnicodeToKSC5601.cpp \
+		ucvko/nsISO2022KRToUnicode.cpp \
+		ucvko/nsUnicodeToISO2022KR.cpp \
+		ucvko/nsCP949ToUnicode.cpp \
+		ucvko/nsUnicodeToCP949.cpp \
+		ucvko/nsUnicodeToX11Johab.cpp \
+		ucvko/nsUnicodeToJohab.cpp \
+		ucvko/nsJohabToUnicode.cpp \
+		ucvko/nsUnicodeToJohabNoAscii.cpp \
+		ucvibm/nsCP850ToUnicode.cpp \
+		ucvibm/nsCP852ToUnicode.cpp \
+		ucvibm/nsCP855ToUnicode.cpp \
+		ucvibm/nsCP857ToUnicode.cpp \
+		ucvibm/nsCP862ToUnicode.cpp \
+		ucvibm/nsCP864ToUnicode.cpp \
+		ucvibm/nsCP864iToUnicode.cpp \
+		ucvibm/nsUnicodeToCP850.cpp \
+		ucvibm/nsUnicodeToCP852.cpp \
+		ucvibm/nsUnicodeToCP855.cpp \
+		ucvibm/nsUnicodeToCP857.cpp \
+		ucvibm/nsUnicodeToCP862.cpp \
+		ucvibm/nsUnicodeToCP864.cpp \
+		ucvibm/nsUnicodeToCP864i.cpp \
+		src/nsUConvModule.cpp \
+		src/nsCharsetConverterManager.cpp \
+		src/nsTextToSubURI.cpp \
+		src/nsUnicodeDecodeHelper.cpp \
+		src/nsUnicodeEncodeHelper.cpp \
+		src/nsCharsetAliasImp.cpp \
+		src/nsURLProperties.cpp \
+		src/nsMappingCache.cpp \
+		src/nsISO88591ToUnicode.cpp \
+		src/nsCP1252ToUnicode.cpp \
+		src/nsMacRomanToUnicode.cpp \
+		src/nsUTF8ToUnicode.cpp \
+		src/nsUnicodeToISO88591.cpp \
+		src/nsUnicodeToCP1252.cpp \
+		src/nsUnicodeToMacRoman.cpp \
+		src/nsUnicodeToUTF8.cpp \
+		src/nsScriptableUConv.cpp \
+		src/nsConverterInputStream.cpp \
+		$(NULL)
+
+EXPORTS		= \
+		public/nsICharsetAlias.h \
+		public/nsICharsetConverterManager.h \
+		public/nsIPlatformCharset.h \
+		public/nsIUnicodeDecodeHelper.h \
+		public/nsIUnicodeDecoder.h \
+		public/nsIUnicodeEncodeHelper.h \
+		public/nsIUnicodeEncoder.h \
+		public/nsICharRepresentable.h \
+		public/nsIMappingCache.h \
+		public/nsIConverterInputStream.h \
+		public/uconvutil.h \
+		$(NULL)
+
+notneeded = \
+		ucvja/nsUCVJACID.h \
+		ucvja/nsUCVJA2CID.h \
+		ucvcn/nsUCvCnCID.h \
+		ucvtw/nsUCvTWCID.h \
+		ucvtw2/nsUCvTW2CID.h \
+		ucvko/nsUCvKOCID.h \
+		ucvibm/nsUCvIBMCID.h \
+		$(NULL)
+
+XPIDLSRCS	= \
+		nsITextToSubURI.idl \
+		nsICurrentCharsetListener.idl \
+		nsICharsetConverterManager2.idl \
+		nsIScriptableUConv.idl \
+		$(NULL)
+
+EXPORT_RESOURCE	= \
+		src/charsetalias.properties \
+		src/charsetData.properties \
+		$(NULL)
+
+ifeq ($(MOZ_WIDGET_TOOLKIT),os2)
+CPPSRCS			+= src/nsOS2Charset.cpp
+EXPORT_RESOURCE		+= src/os2charset.properties
+else
+ifeq ($(MOZ_WIDGET_TOOLKIT),windows)
+CPPSRCS			+= src/nsWinCharset.cpp
+EXPORT_RESOURCE		+= src/wincharset.properties
+else
+ifneq (,$(filter cocoa mac, $(MOZ_WIDGET_TOOLKIT)))
+CPPSRCS			+= src/nsMacCharset.cpp
+EXPORT_RESOURCE		+= src/maccharset.properties
+else
+ifeq ($(OS_ARCH),BeOS)
+CPPSRCS			+= src/nsBeOSCharset.cpp
+else
+CPPSRCS			+= src/nsUNIXCharset.cpp
+EXPORT_RESOURCE		+= src/unixcharset.properties
+# add platform charset remapping properties files here if necessary
+# (see unixcharset.sample.properties for an example file)
+# eg: if we needed a charset remap for OSARCH=Linux then add the following line:
+#EXPORT_RESOURCE		+= src/unixcharset.Linux.properties
+endif
+endif
+endif
+endif
+
+EXTRA_DSO_LDOPTS = \
+		$(MOZ_UNICHARUTIL_LIBS) \
+		$(MOZ_COMPONENT_LIBS) \
+		$(NULL)
+
+ifneq (,$(filter cocoa mac, $(MOZ_WIDGET_TOOLKIT)))
+EXTRA_DSO_LDOPTS += $(TK_LIBS)
+endif
+
+ifeq ($(MOZ_WIDGET_TOOLKIT),os2)
+ifeq ($(MOZ_OS2_TOOLS),VACPP)
+OS_LIBS += libuls.lib
+else
+OS_LIBS += -llibuni
+endif
+endif
+
+LOCAL_INCLUDES	= \
+		-I$(srcdir)/util \
+		-I$(srcdir)/src \
+		-I$(srcdir)/ucvlatin \
+		-I$(srcdir)/ucvibm \
+		-I$(srcdir)/ucvja \
+		-I$(srcdir)/ucvtw2 \
+		-I$(srcdir)/ucvtw \
+		-I$(srcdir)/ucvko \
+		-I$(srcdir)/ucvcn \
+		$(NULL)
+
+SHARED_LIBRARY_LIBS = \
+	$(DIST)/lib/$(LIB_PREFIX)ucvutil_s.$(LIB_SUFFIX) \
+	$(NULL)
+
 include $(topsrcdir)/config/rules.mk
 
+# CODESET is not automatically defined on some older versions of Redhat.
+# Define _XOPEN_SOURCE so CODESET will get defined and thus allow 
+# nl_langinfo(CODESET) to compile on these systems.
+ifeq ($(OS_ARCH), Linux)
+DEFINES         += -D_XOPEN_SOURCE=500
+endif
+
+libs:: $(EXPORT_RESOURCE)
+	$(INSTALL) $^ $(DIST)/bin/res
+
+install:: $(EXPORT_RESOURCE)
+	$(SYSINSTALL) $(IFLAGS1) $^ $(DESTDIR)$(mozappdir)/res 
