Add VPS variable to contain the platform specific VPATH separator.

--- a/mozilla/config/autoconf.mk.in
+++ b/mozilla/config/autoconf.mk.in
@@ -372,6 +372,8 @@ MOZ_AUTO_DEPS	= @MOZ_AUTO_DEPS@
 COMPILER_DEPEND = @COMPILER_DEPEND@
 MDDEPDIR        := @MDDEPDIR@
 
+VPS		:= @VPS@
+
 MOZ_DISABLE_DTD_DEBUG = @MOZ_DISABLE_DTD_DEBUG@
 
 MOZ_DEMANGLE_SYMBOLS = @MOZ_DEMANGLE_SYMBOLS@
