--- a/mozilla/intl/uconv/Makefile.in
+++ b/mozilla/intl/uconv/Makefile.in
@@ -34,9 +34,9 @@
 DEPTH		= ../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@ @srcdir@/idl
 
 include $(DEPTH)/config/autoconf.mk
+VPATH		= @srcdir@$(VPS)@srcdir@/idl
 
 MODULE		= uconv
 LIBRARY_NAME	= uconv
