--- a/mozilla/js/src/xpconnect/tools/src/Makefile.in
+++ b/mozilla/js/src/xpconnect/tools/src/Makefile.in
@@ -35,9 +35,9 @@
 DEPTH		= ../../../../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@ @srcdir@/../idl
 
 include $(DEPTH)/config/autoconf.mk
+VPATH		= @srcdir@$(VPS)@srcdir@/../idl
 
 MODULE		= xpctools
 LIBRARY_NAME	= xpctools
