--- a/mozilla/modules/libutil/Makefile.in
+++ b/mozilla/modules/libutil/Makefile.in
@@ -22,9 +22,9 @@
 DEPTH		= ../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@ @srcdir@/public
 
 include $(DEPTH)/config/autoconf.mk
+VPATH		= @srcdir@$(VPS)@srcdir@/public
 
 MODULE		= util
 LIBRARY_NAME	= mozutil_s
