--- a/mozilla/netwerk/build2/Makefile.in
+++ b/mozilla/netwerk/build2/Makefile.in
@@ -22,12 +22,13 @@
 DEPTH		= ../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@ \
-		@srcdir@/../protocol/ftp/public \
-		@srcdir@/../protocol/viewsource/public \
-		$(NULL)
 
 include $(DEPTH)/config/autoconf.mk
+VPATH		= \
+		@srcdir@$(VPS)\
+		@srcdir@/../protocol/ftp/public$(VPS)\
+		@srcdir@/../protocol/viewsource/public$(VPS)\
+		$(NULL)
 
 MODULE		= necko2
 LIBRARY_NAME	= necko2
