--- a/mozilla/modules/libpr0n/Makefile.in
+++ b/mozilla/modules/libpr0n/Makefile.in
@@ -22,11 +22,90 @@
 DEPTH		= ../..
 topsrcdir	= @top_srcdir@
 srcdir		= @srcdir@
-VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
+VPATH		= @srcdir@$(VPS)@srcdir@/public
 
-DIRS		= public src decoders build
+MODULE		= imglib2
+LIBRARY_NAME	= imglib2
+EXPORT_LIBRARY	= 1
+IS_COMPONENT	= 1
+MODULE_NAME	= nsImageLib2Module
+
+DIRS		= decoders/mng
+
+ifeq ($(OS_ARCH),WINNT)
+DIRS		+= decoders/icon/win decoders/icon
+endif
+
+ifeq ($(OS_ARCH),OS2)
+DIRS		+= decoders/icon/os2 decoders/icon
+endif
+
+REQUIRES	= xpcom \
+		  string \
+		  necko \
+		  nkcache \
+		  gfx \
+		  $(JPEG_REQUIRES) \
+		  $(PNG_REQUIRES) \
+		  $(ZLIB_REQUIRES) \
+		  $(NULL)
+
+CPPSRCS		= \
+		src/imgCache.cpp \
+		src/imgContainer.cpp \
+		src/imgLoader.cpp \
+		src/imgRequest.cpp \
+		src/imgRequestProxy.cpp \
+		decoders/ppm/nsPPMDecoder.cpp \
+		decoders/png/nsPNGDecoder.cpp \
+		decoders/gif/GIF2.cpp \
+		decoders/gif/nsGIFDecoder2.cpp \
+		decoders/gif/imgContainerGIF.cpp \
+		decoders/jpeg/nsJPEGDecoder.cpp \
+		decoders/bmp/nsBMPDecoder.cpp \
+		decoders/bmp/nsICODecoder.cpp \
+		decoders/xbm/nsXBMDecoder.cpp \
+		build/nsImageModule.cpp \
+		$(NULL)
+
+EXPORTS		= \
+		public/ImageErrors.h \
+		public/ImageLogging.h \
+		$(NULL)
+
+XPIDLSRCS	= \
+		imgICache.idl             \
+		imgIContainer.idl         \
+		imgIContainerObserver.idl \
+		imgIDecoder.idl           \
+		imgIDecoderObserver.idl	  \
+		imgILoad.idl              \
+		imgILoader.idl            \
+		imgIRequest.idl		  \
+		$(NULL)
+
+LOCAL_INCLUDES	= \
+		-I$(srcdir)/src \
+		-I$(srcdir)/decoders/gif \
+		-I$(srcdir)/decoders/jpeg \
+		-I$(srcdir)/decoders/png \
+		-I$(srcdir)/decoders/bmp \
+		-I$(srcdir)/decoders/xbm \
+		-I$(srcdir)/decoders/ppm \
+		$(NULL)
+
+EXTRA_DSO_LIBS	= gkgfx
+
+EXTRA_DSO_LDOPTS = \
+		$(LIBS_DIR) \
+		$(EXTRA_DSO_LIBS) \
+		$(MOZ_COMPONENT_LIBS) \
+		$(JPEG_LIBS) \
+		$(PNG_LIBS) \
+		$(ZLIB_LIBS) \
+		$(NULL)
 
 include $(topsrcdir)/config/rules.mk
 
