Default MKINSTALLDIRS to 'nsinstall -D'

--- a/mozilla/config/autoconf.mk.in
+++ b/mozilla/config/autoconf.mk.in
@@ -373,6 +373,7 @@ COMPILER_DEPEND = @COMPILER_DEPEND@
 MDDEPDIR        := @MDDEPDIR@
 
 VPS		:= @VPS@
+MKINSTALLDIRS	= @MKINSTALLDIRS@
 
 MOZ_DISABLE_DTD_DEBUG = @MOZ_DISABLE_DTD_DEBUG@
 
