Force mozilla/config to use mkinstalldirs instead of nsinstall -D for MKINSTALLDIRS because nsinstall hasn't been built yet for unix builds.

--- a/mozilla/config/Makefile.in
+++ b/mozilla/config/Makefile.in
@@ -77,6 +77,9 @@ endif
 
 include $(topsrcdir)/config/config.mk
 
+# Chicken vs Egg
+MKINSTALLDIRS='$(AUTOCONF_TOOLS)/mkinstalldirs'
+
 # Do not install util programs
 NO_INSTALL=1
 
