--- a/mozilla/.mozconfig
+++ b/mozilla/.mozconfig
@@ -6,7 +6,7 @@
 mk_add_options MOZ_MAKE_FLAGS=-j4
 
 #config
-ac_add_options --with-user-appdir=".beonex/comm"
+#ac_add_options --enable-homedir=.beonex - broken?
 
 #tune
 mk_add_options MOZILLA_OFFICIAL=1
