--- a/mozilla/Makefile.in
+++ b/mozilla/Makefile.in
@@ -253,7 +253,7 @@ endif
 ifdef MOZ_PHOENIX
 tier_99_dirs	+= browser
 else
-#tier_99_dirs	+= xpfe/bootstrap
+tier_99_dirs	+= xpfe/bootstrap
 endif
 
 ifdef MOZ_ENABLE_GTK
