--- a/mozilla/directory/c-sdk/ldap/libraries/libiutil/Makefile
+++ b/mozilla/directory/c-sdk/ldap/libraries/libiutil/Makefile
@@ -23,8 +23,8 @@
 
 
 MOD_DEPTH	= ../../..
-srcdir		= .
-topsrcdir 	= ../../..
+srcdir		= /cygdrive/c/builds/trunk/mozilla/directory/c-sdk/ldap/libraries/libiutil
+topsrcdir 	= /cygdrive/c/builds/trunk/mozilla/directory/c-sdk
 
 include $(MOD_DEPTH)/config/autoconf.mk
 include $(topsrcdir)/build.mk
