--- a/mozilla/extensions/python/xpcom/src/loader/Makefile.in
+++ b/mozilla/extensions/python/xpcom/src/loader/Makefile.in
@@ -49,7 +49,7 @@ include $(DEPTH)/config/autoconf.mk
 
 LIBRARY_NAME	= pyloader
 IS_COMPONENT	= 1
-REQUIRES	= xpcom string $(NULL)
+REQUIRES	= xpcom string mozreg $(NULL)
 
 LOCAL_INCLUDES = $(PYTHON_INCLUDES)
 EXTRA_LIBS += $(PYTHON_LIBS)
