--- a/mozilla/xpfe/components/regviewer/Makefile.in
+++ b/mozilla/xpfe/components/regviewer/Makefile.in
@@ -32,7 +32,8 @@ EXPORT_LIBRARY = 1
 SHORT_LIBNAME	= regviewr
 IS_COMPONENT	= 1
 MODULE_NAME	= nsRegistryViewerModule
-REQUIRES	= xpcom \
+REQUIRES	= mozreg \
+		  xpcom \
 		  string \
 		  rdf \
 		  $(NULL)
