Back out changes dougt just made, intended for MINIMO_01302003_BRANCH (but I think they were an incorrect checkin of generated files anyway).

--- a/mozilla/directory/c-sdk/config/Makefile
+++ b/mozilla/directory/c-sdk/config/Makefile
@@ -34,9 +34,8 @@
 # 
 
 MOD_DEPTH	= ..
-topsrcdir	= /cygdrive/c/builds/trunk/mozilla/directory/c-sdk
-srcdir		= /cygdrive/c/builds/trunk/mozilla/directory/c-sdk/config
-VPATH		= /cygdrive/c/builds/trunk/mozilla/directory/c-sdk/config
+topsrcdir	= ..
+srcdir		= .
 
 include $(MOD_DEPTH)/config/autoconf.mk
 
