--- a/mozilla/js/src/xpconnect/Makefile.in
+++ b/mozilla/js/src/xpconnect/Makefile.in
@@ -38,7 +38,13 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= public idl src shell
+DIRS		= public idl
+
+ifdef MOZ_JSLOADER
+DIRS         +=  loader
+endif
+
+DIRS         += src shell
 
 ifdef ENABLE_TESTS
 DIRS		+= tests
@@ -46,10 +52,6 @@ endif
 
 ifdef MOZ_XPCTOOLS
 DIRS         +=  tools 
-endif
-
-ifdef MOZ_JSLOADER
-DIRS         +=  loader
 endif
 
 include $(topsrcdir)/config/rules.mk
