Make --disable-xul work (but keep XUL scrollbars working for now). Bug 69995.

--- a/mozilla/Makefile.in
+++ b/mozilla/Makefile.in
@@ -258,8 +258,9 @@ endif
 ifdef MOZ_PHOENIX
 tier_99_dirs	+= browser
 else
-# We need be able to disable this in cleaner way:
-# tier_99_dirs	+= xpfe/bootstrap
+ifdef MOZ_XUL
+tier_99_dirs	+= xpfe/bootstrap
+endif
 endif
 
 ifdef MOZ_ENABLE_GTK
