--- a/mozilla/configure.in
+++ b/mozilla/configure.in
@@ -4624,11 +4624,10 @@ dnl disable xul
 dnl ========================================================
 MOZ_XUL=1
 MOZ_ARG_DISABLE_BOOL(xul,
-[  --disable-xul           Disable XUL (standalone modules only)],
+[  --disable-xul           Disable XUL],
     MOZ_XUL= )
 if test "$MOZ_XUL"; then
   AC_DEFINE(MOZ_XUL)
-  AC_DEFINE(INCLUDE_XUL)
 fi
 AC_SUBST(MOZ_XUL)
 
