--- a/mozilla/content/xul/Makefile.in
+++ b/mozilla/content/xul/Makefile.in
@@ -26,7 +26,11 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= content document templates
+DIRS		= document
+
+ifdef MOZ_XUL
+DIRS		+= content templates
+endif
 
 include $(topsrcdir)/config/rules.mk
 
