--- a/mozilla/security/manager/Makefile.in
+++ b/mozilla/security/manager/Makefile.in
@@ -101,7 +101,9 @@ export::
 dependclean export::
 	$(MAKE) -C boot $@
 	$(MAKE) -C ssl $@
+ifdef MOZ_XUL
 	$(MAKE) -C pki $@
+endif
 
 libs::
 	$(MAKE) -C $(topsrcdir)/security/coreconf $(DEFAULT_GMAKE_FLAGS)
@@ -135,7 +137,9 @@ endif
 endif
 	$(MAKE) -C boot $@
 	$(MAKE) -C ssl $@
+ifdef MOZ_XUL
 	$(MAKE) -C pki $@
+endif
 
 install::
 	$(SYSINSTALL) -m 755 $(DIST)/lib/$(LOADABLE_ROOT_MODULE) $(DESTDIR)$(mozappdir)
@@ -149,11 +153,15 @@ ifdef HAVE_FREEBL_MODULES
 endif
 	$(MAKE) -C boot $@
 	$(MAKE) -C ssl $@
+ifdef MOZ_XUL
 	$(MAKE) -C pki $@
+endif
 
 clean clobber clobber_all realclean distclean depend::
 	$(MAKE) -C boot $@
 	$(MAKE) -C ssl $@
+ifdef MOZ_XUL
 	$(MAKE) -C pki $@
+endif
 	$(MAKE) -C $(topsrcdir)/security/coreconf $(DEFAULT_GMAKE_FLAGS) clean
 	$(MAKE) -C $(topsrcdir)/security/nss/lib $(DEFAULT_GMAKE_FLAGS) clean
