--- a/mozilla/Makefile.in
+++ b/mozilla/Makefile.in
@@ -259,7 +259,9 @@ ifdef MOZ_PHOENIX
 tier_99_dirs	+= browser
 else
 ifdef MOZ_XUL
+ifdef MOZ_XPINSTALL
 tier_99_dirs	+= xpfe/bootstrap
+endif
 endif
 endif
 
