Bug 609918 - spell checker should not check quoted text.
Landing mozill patch on branch. Landing for prohr.

--- a/mozilla/editor/composer/src/Makefile.in
+++ b/mozilla/editor/composer/src/Makefile.in
@@ -61,6 +61,7 @@ REQUIRES	= xpcom \
 		  $(NULL)
 
 CPPSRCS  = \
+           nsComposeTxtSrvFilter.cpp      \
            nsEditorShell.cpp              \
            nsEditorParserObserver.cpp     \
            nsInterfaceState.cpp           \
