--- a/mozilla/config/autoconf.mk.in
+++ b/mozilla/config/autoconf.mk.in
@@ -87,6 +87,9 @@ ENABLE_TESTS	= @ENABLE_TESTS@
 IBMBIDI = @IBMBIDI@
 SUNCTL = @SUNCTL@
 ACCESSIBILITY = @ACCESSIBILITY@
+MOZ_XPINSTALL = @MOZ_XPINSTALL@
+MOZ_JSLOADER  = @MOZ_JSLOADER@
+MOZ_SINGLE_PROFILE = @MOZ_SINGLE_PROFILE@
 MOZ_LDAP_XPCOM = @MOZ_LDAP_XPCOM@
 MOZ_LDAP_XPCOM_EXPERIMENTAL = @MOZ_LDAP_XPCOM_EXPERIMENTAL@
 XPCOM_USE_LEA = @XPCOM_USE_LEA@
