--- a/mozilla/Makefile.in
+++ b/mozilla/Makefile.in
@@ -265,12 +265,8 @@ endif
 endif
 endif
 
-ifdef MOZ_ENABLE_GTK
-tier_99_dirs	+= embedding/browser/gtk/tests
-endif
-
-ifdef MOZ_ENABLE_GTK2
-tier_99_dirs	+= embedding/browser/gtk/tests
+ifneq (,$(MOZ_ENABLE_GTK)$(MOZ_ENABLE_GTK2))
+tier_99_dirs	+= embedding/browser/gtk
 endif
 
 # viewer
